Add spin icon for loading message

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,7 +14,7 @@
 })
 
     <link rel="stylesheet" href="fonts/fontello/css/frast.css" type='text/css' media='all' />
-
+    <link rel="stylesheet" href="fonts/fontello/css/animation.css" type='text/css' media='all' />
     <link href='http://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
 
     <!-- build:css stylesheet/style.css -->
@@ -26,7 +26,7 @@
     <header>
         <h1>Timeline</h1>
     </header>
-    <div class="message">Chargement en cours...</div>
+    <div class="message"><i class="icon-spin animate-spin"></i> Chargement en cours...</div>
     <section id="timeline" class="container">
     </section>
 
