--- a/src/html/index.html
+++ b/src/html/index.html
@@ -38,7 +38,7 @@
             <div class="timeline-content">
                 <h2>{{title}}</h2>
                 <div class="content">{{content}}</div>
-                <a href="{{url}}" target="_blank" class="read-more">Source {{source}}</a>
+                <a href="{{url}}" target="_blank" class="read-more">Via <span>{{source}}</span></a>
                 <span class="date">{{date}}</span>
             </div>
         </div>
