Fix theme color to match Tilap.net, add author footer mention

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -46,6 +46,8 @@
 
     <footer>
         Timeline automatically built with <a href="https://ifttt.com/" target="_blank">IFTTT</a>, <a href="https://docs.google.com/">Google Spreadsheet</a> and a bit of code fastly built with <a href="http://tilap.github.io/frast/" target="_blank">Frast</a>.
+        <br>
+        By <a href="http://tilap.net">Tilap</a>.
     </footer>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- build:js js/bundle.js -->
