--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,9 +24,9 @@
 <body>
 
     <header>
-        <h1>Timeline</h1>
+        <h1>Chargement en cours...</h1>
     </header>
-    <div class="message"><i class="icon-spin animate-spin"></i> Chargement en cours...</div>
+    <div class="message"><i class="icon-spin animate-spin"></i> Veuillez patienter...</div>
     <section id="timeline" class="container">
     </section>
 
