Add app favicon

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,6 +13,11 @@
     "description" : "<%- app.description %>"
 })
 
+@@include('./includes/favicon.html', {
+    "url"   : "<%- app.url %>assets"
+})
+
+
     <link rel="stylesheet" href="fonts/fontello/css/frast.css" type='text/css' media='all' />
     <link rel="stylesheet" href="fonts/fontello/css/animation.css" type='text/css' media='all' />
     <link href='http://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
